--- a/index.html
+++ b/index.html
@@ -1,82 +1,77 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale='=1,user-scalable=no">
-    <link rel="stylesheet" type="texr/css" href="style.css">
-    <link rel="shortcut icon" href="images/favicon.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-    <title>Clone Home Instagram</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maxmum-scale=1, user-scalable=no">
+  <title>Instagram</title>
+  <link rel="shortcut icon" href="img/favicon.png" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
-        <div id="main-container">
-            <div id="banner-container">
-                <!-- banner lateral -->
-                <img src="images/imagem_cel_exterior.png" alt="foto de dois celulares um preto e um branco onde o preto está atrás do branco">
-
+  <main>
+    <div id="main-container">
+      <!-- BANNER LATERAL -->
+      <div id="banner-container">
+        <img src="images/imagem_cel_exterior.png" alt="Crie uma conta no Instagram">
+      </div>
+      <!-- FORM DE LOGIN E REGISTRO -->
+      <div id="form-container">
+        <div id="form-box">
+          <img id="logo-insta" src="images/logo_instagram.png" alt="Instagram">
+          <form id="login-form">
+            <input type="text" name="username" placeholder="Telefone, nome de usuário ou email">
+            <input type="password" name="password" placeholder="Senha">
+            <input type="submit" value="Entrar">
+          </form>
+          <div class="separator">
+            <div class="line"></div>
+            <span>Ou</span>
+          </div>
+          <div id="other-links">
+            <div id="facebook-login">
+              <a href="#">
+                <img src="images/logo_facebook.svg" alt="Facebook">
+                <span>Entrar com o Facebook</span>
+              </a>
             </div>
-            <div id="form-container">
-                <!-- formulário de login -->
-                <div id="form-box">
-                    <img id="logo-insta" src="images/logo_instagram.png" alt="logomarca do Instagram">
-                    <form id="login-form">
-                        <input type="text" name="username" placeholder="nome de usuário ou email">
-                        <input type="password" placeholder="senha">
-                        <input type="submit" value="enviar">
-                    </form>
-                    <!-- separador -->
-                    <div class="separator">
-                        <div class="line"></div>
-                        <span>Ou</span>
-                    </div>
-                    <!-- links alternativos -->
-                    <div id="other-links">
-                        <div id="facebook-login">
-                            <a href="www.facebook.com">
-                                <img src="images/logo_facebook.svg" alt="logomarca do facebook">
-                                <span>Entrar com o facebook</span>
-                            </a>
-                        </div>
-                        <div id="forgot-password">
-                            <a href="#">Esqueceu a senha</a>
-                        </div>
-                    </div>
-                </div>
-
+            <div id="forgot-pass">
+              <a href="#">Esqueceu a senha?</a>
             </div>
-            <div id="register-container">
-                <p>Não tem uma conta <a href="#">Cadastre-se</a></p>
-            </div>
-            <div id="get-app-container">
-                <p>Obtenha o aplicativo</p>
-                <a href="#"><img src="images/botao_apple.png" alt="apple store"></a>
-                <a href="#"><img src="images/botao_google_play.png" alt="google play"></a>
-            </div>
+          </div>
         </div>
-    </main>
-    <!-- Rodapé -->
-    <footer>
-        <nav>
-            <ul id="footer-links">
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Ajuda</a></li>
-                <li><a href="#">Imprensa</a></li>
-                <li><a href="#">API</a></li>
-                <li><a href="#">Carreiras</a></li>
-                <li><a href="#">Privacidade</a></li>
-                <li><a href="#">Termos</a></li>
-                <li><a href="#">Localizações</a></li>
-                <li><a href="#">Contas mais relevantes</a></li>
-                <li><a href="#">Hashtags</a></li>
-                <li><a href="#">Idioma</a></li>
-
-            </ul>
-        </nav>
-        <p id="copyright">&copy; Instagram do Facebook</p>
-    </footer>
+        <div id="register-container">
+          <p>Não tem uma conta? <a href="#">Cadastre-se</a></p>
+        </div>
+        <div id="get-app-container">
+          <p>Obtenha o aplicativo.</p>
+          <a href="#">
+            <img src="images/botao_apple.png" alt="Apple Store">
+          </a>
+          <a href="#">
+            <img src="images/botao_google_play.png" alt="Google Play">
+          </a>
+        </div>
+      </div>
+    </div>
+  </main>
+  <!-- RODAPÉ E LINKS DE NAVEGAÇÃO -->
+  <footer>
+    <nav>
+      <ul id="footer-links">
+        <li><a href="#">Sobre</a></li>
+        <li><a href="#">Ajuda</a></li>
+        <li><a href="#">Imprensa</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Carreiras</a></li>
+        <li><a href="#">Privacidade</a></li>
+        <li><a href="#">Termos</a></li>
+        <li><a href="#">Localizações</a></li>
+        <li><a href="#">Contas mais relevantes</a></li>
+        <li><a href="#">Hashtags</a></li>
+        <li><a href="#">Idioma</a></li>
+      </ul>
+    </nav>
+    <p id="copyright">&copy; Instagram do Facebook</p>
+  </footer>
 </body>
 </html>
